# geonames-api

./: .gitignore  pyproject.toml
geonames_api/: config.py  es_index_settings.py  main.py  models.py  parse_and_normalize.py  queries.py  utils.py
scripts/: index_geonames_data.py
